# agents-event-driven

./: .gitignore  .pylintrc  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt  resume.md
agents/: __init__.py  common_prompts.py  cover_letter_agent.py  cover_letter_worker.py  docx_render_agent.py  jd_analysis.py  jd_analysis_async.py  jd_worker.py  json_repair.py  match_planner.py  match_planner_async.py  match_worker.py  profile_from_resume.py  profile_worker.py  prompt_context.py  qa_improver.py  qa_improver_async.py  qa_improver_worker.py  qa_shared.py  resume_composer.py  resume_composer_async.py  resume_composer_worker.py  resume_qa.py  resume_qa_async.py  resume_qa_worker.py
api/: __init__.py  app.py  pipeline.py  tailor.py
core/: __init__.py  candidate_context.py  config.py  config_adapter.py  events.py  json_repair.py  json_utils.py  llm_client.py  llm_factory.py  llm_step_worker.py  models.py  obs.py  pipeline_events.py  pipeline_orchestrator.py  pipeline_store.py  settings.py  state_machine.py
debug_docx/: 333e9c98-9c51-453d-bfaa-e403d78b47f3-cover.docx  333e9c98-9c51-453d-bfaa-e403d78b47f3.docx  3ffd4102-6766-43df-ae3f-c2c87c76bce1.docx  4f8e3b56-d082-468d-b9f9-b11411a62276.docx  555bfcf8-5061-4b86-8cc2-7f5cc09c4ab6.docx  5c7a2ca5-1c48-4b96-9afa-f79e8894bca3-cover.docx  5c7a2ca5-1c48-4b96-9afa-f79e8894bca3.docx  5c9e1233-51de-4ac8-a390-9e58cadc760b-cover.docx  5c9e1233-51de-4ac8-a390-9e58cadc760b.docx  68f06d76-0290-4d7b-b16b-2434a95c7367.docx  90e0aea6-1863-4ac3-bf4b-90eb3e82e26a.docx  95e69367-b634-48f1-ae6c-40877a92d636-cover.docx  95e69367-b634-48f1-ae6c-40877a92d636.docx  b100f17a-efd7-4f4b-8b3a-e50eab0e5a88-cover.docx  b100f17a-efd7-4f4b-8b3a-e50eab0e5a88.docx  b706ebbd-cb87-4dfd-937b-36eda90c772f-cover.docx  b706ebbd-cb87-4dfd-937b-36eda90c772f.docx  d2536d2e-bc47-4e0a-8170-24bae2c5c5bc.docx  e39670cd-b7db-4832-9ddc-2cc02d3c7a3c-cover.docx  e39670cd-b7db-4832-9ddc-2cc02d3c7a3c.docx  f740c9c8-259c-4a60-b3a0-9f88ed36c933-cover.docx  f740c9c8-259c-4a60-b3a0-9f88ed36c933.docx  f769dc05-253a-4ff6-a1c6-29b668dda779.docx  f9470134-2f65-4726-bcb0-4310ad06452b-cover.docx  f9470134-2f65-4726-bcb0-4310ad06452b.docx
(+93 files in other folders)
